# formal_practice

./: README.md
CYK_and_Earley/: CMakeLists.txt
CYK_and_Earley/src/: CYK_algorithm.cpp  CYK_algorithm.h  Earley.cpp  Earley.h  Grammar.cpp  Grammar.h
CYK_and_Earley/tests/: CYK_tests.cpp  Earley_tests.cpp
CYK_and_Earley/tests/CYK_tests/: CMakeLists.txt  CYK_tests.cpp
CYK_and_Earley/tests/Earley_tests/: CMakeLists.txt  Earley_tests.cpp
first_algorithm/: CMakeLists.txt
first_algorithm/src/: ChomskyNormalForm.cpp  ChomskyNormalForm.h
